--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -24,7 +24,7 @@
             <objects>
                 <viewController id="P2b-bC-zaB" customClass="EnterViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wQg-1M-WtZ">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9L-d6-ftf">
@@ -301,6 +301,7 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstItem="Mjj-do-Qlb" firstAttribute="top" secondItem="ofU-NW-4MG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="0Rv-97-Tey"/>
                                     <constraint firstItem="2Un-4x-Qq4" firstAttribute="leading" secondItem="IUh-Hq-Kbv" secondAttribute="leading" type="default" id="5AX-ZC-FmD"/>
                                     <constraint firstItem="Mjj-do-Qlb" firstAttribute="leading" secondItem="IUh-Hq-Kbv" secondAttribute="leading" type="default" id="5TA-ek-aVe"/>
                                     <constraint firstItem="Pl5-Dm-G7M" firstAttribute="top" secondItem="2Un-4x-Qq4" secondAttribute="top" type="default" id="6Xl-Em-qeO"/>
@@ -314,7 +315,6 @@
                                     <constraint firstItem="YuK-v2-MqQ" firstAttribute="top" secondItem="IUh-Hq-Kbv" secondAttribute="top" constant="10" id="qAw-RQ-iFw"/>
                                     <constraint firstItem="Pl5-Dm-G7M" firstAttribute="leading" secondItem="IUh-Hq-Kbv" secondAttribute="leading" constant="30" id="rQf-TR-hfA"/>
                                     <constraint firstItem="Mjj-do-Qlb" firstAttribute="trailing" secondItem="2Un-4x-Qq4" secondAttribute="trailing" type="default" id="rac-pO-zjy"/>
-                                    <constraint firstAttribute="bottom" secondItem="Mjj-do-Qlb" secondAttribute="bottom" constant="29" id="v3c-rr-exP"/>
                                     <constraint firstItem="ofU-NW-4MG" firstAttribute="top" secondItem="uem-BR-95a" secondAttribute="top" type="default" id="yiT-kR-oZJ"/>
                                 </constraints>
                             </view>
@@ -328,7 +328,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="UI" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mOD-He-cGz">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="American" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mOD-He-cGz">
                                         <constraints>
                                             <constraint firstAttribute="width" constant="81" id="wRS-cP-PpQ"/>
                                         </constraints>
@@ -336,9 +336,9 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="HUST" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JD-xQ-lQG">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Indian" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JD-xQ-lQG">
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="82" id="DIK-F6-Pqs"/>
+                                            <constraint firstAttribute="width" constant="90" id="pQ5-Mm-IYt"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -373,20 +373,47 @@
                                             <action selector="checkSelected:" destination="P2b-bC-zaB" eventType="touchUpInside" id="dK2-nm-kf8"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Vietnamese" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J07-fH-bbi">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="96" id="WuX-5h-aqL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NwC-14-yMC">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="x8c-AC-LQo"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal">
+                                            <color key="titleColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" image="symbol_check.png"/>
+                                        <connections>
+                                            <action selector="checkSelected:" destination="P2b-bC-zaB" eventType="touchUpInside" id="l9Y-4B-B59"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstItem="NwC-14-yMC" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="07a-Jh-SGB"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="7Sh-1g-kdo"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="trailing" secondItem="zhq-SV-7KX" secondAttribute="trailing" type="default" id="Ak5-Ky-MxH"/>
                                     <constraint firstItem="zhq-SV-7KX" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="40" id="HFX-wD-Eeh"/>
                                     <constraint firstItem="mOD-He-cGz" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" constant="30" id="NH3-f8-tpg"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="70" id="PEz-bF-syR"/>
+                                    <constraint firstItem="NwC-14-yMC" firstAttribute="trailing" secondItem="Gpk-Lw-3pz" secondAttribute="trailing" type="default" id="Ql3-kj-lqD"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="top" secondItem="2JD-xQ-lQG" secondAttribute="top" type="default" id="UnY-cw-oK8"/>
                                     <constraint firstItem="2JD-xQ-lQG" firstAttribute="leading" secondItem="mOD-He-cGz" secondAttribute="leading" type="default" id="Z8O-3f-eCM"/>
                                     <constraint firstItem="OCD-GN-2X4" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="10" id="bJP-Ka-sIn"/>
+                                    <constraint firstAttribute="bottom" secondItem="NwC-14-yMC" secondAttribute="bottom" constant="73" id="dvD-WI-dSo"/>
                                     <constraint firstItem="zhq-SV-7KX" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="gmZ-4E-rN8"/>
+                                    <constraint firstItem="J07-fH-bbi" firstAttribute="leading" secondItem="2JD-xQ-lQG" secondAttribute="leading" type="default" id="kNe-h3-ZVx"/>
                                     <constraint firstItem="OCD-GN-2X4" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="lEs-35-EwQ"/>
                                     <constraint firstItem="zhq-SV-7KX" firstAttribute="top" secondItem="mOD-He-cGz" secondAttribute="top" type="default" id="vwq-eo-A9q"/>
+                                    <constraint firstItem="J07-fH-bbi" firstAttribute="top" secondItem="2JD-xQ-lQG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="wUI-07-lfi"/>
                                 </constraints>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ymd-2I-6Zw">
@@ -456,7 +483,7 @@
             <objects>
                 <viewController id="Mi6-tF-cKG" customClass="RatingViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XOi-ce-WX9">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2p-fT-g31">
@@ -544,7 +571,7 @@
             <objects>
                 <viewController title="Web Screen" id="jm1-yi-a3d" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uxF-iW-LLh">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b0v-fJ-IuT">
@@ -616,7 +643,7 @@
             <objects>
                 <viewController title="Video Link" id="sYZ-Su-ucG" customClass="VideoEmbed" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NYf-eb-thV">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gKh-sn-UVr">
@@ -669,7 +696,7 @@
             <objects>
                 <viewController title="Web Screen" id="umb-Lo-Ggr" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e5N-XY-rHb">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRZ-Nz-nIu">
@@ -855,7 +882,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
             <objects>
                 <viewController id="eGx-Id-dmB" customClass="MissingViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cN7-bE-aqj">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Missing Ingredients:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAB-zS-1iu">
@@ -1047,7 +1074,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
             <objects>
                 <tableViewController id="3Cg-C8-Kgf" customClass="Psample" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ZtC-4d-lPg">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <label key="tableFooterView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5Lb-5n-k3R">
@@ -1296,7 +1323,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
             <objects>
                 <viewController id="ZEL-9g-xGF" customClass="Precipe" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="K9J-ff-Gqn">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="Giant_Burger_frei.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7E5-X7-728">
@@ -1539,7 +1566,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="RatingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RatingViewController.h"/>
             <relationships>
-                <relationship kind="action" name="tapHideKeyBoard:"/>
                 <relationship kind="outlet" name="commentTextView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="starRatingView" candidateClass="RatingView"/>
             </relationships>
@@ -1563,7 +1589,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="CNy-yC-BCj"/>
-        <segue reference="Qcp-Xn-X94"/>
+        <segue reference="aIc-V8-Hg6"/>
+        <segue reference="1kH-GP-dN6"/>
     </inferredMetricsTieBreakers>
 </document>
